--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">StrengthLog</string>
     <string name="title_section0">Home</string>
     <string name="title_section1">My Program</string>
+    <string name="title_section2">Log History</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
