Add fragment to show ProgramEntrys

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="title_section0">Home</string>
     <string name="title_section1">Add Exercise</string>
     <string name="title_section2">Log History</string>
-    <string name="title_section3">Add Program</string>
+    <string name="title_section3">Log Program</string>
+    <string name="title_section4">Add Program</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
