Update UI to add/show Exercises

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">StrengthLog</string>
     <string name="title_section0">Home</string>
-    <string name="title_section1">Add Exercise</string>
-    <string name="title_section2">Log History</string>
-    <string name="title_section3">Log Program</string>
+    <string name="title_section1">Add Log</string>
+    <string name="title_section2">Show Logs</string>
+    <string name="title_section3">Show Program</string>
     <string name="title_section4">Add Program</string>
+    <string name="title_section5">Add Exercise</string>
+    <string name="title_section6">Show Exercise</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
