Update UI to show ProgramExercise

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_section4">Add Program</string>
     <string name="title_section5">Add Exercise</string>
     <string name="title_section6">Show Exercise</string>
+    <string name="title_section7">Show ProgramExercise</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
