Add Weigth Fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_section6">Show Exercise</string>
     <string name="title_section7">Show ProgramExercise</string>
     <string name="title_section8">Show Weight</string>
+    <string name="title_section9">Add Weight</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
